crates/cli/tests/snapshots/artifact_write_snapshots__artifact_write_already_exists.snap
---
source: crates/cli/tests/artifact_write_snapshots.rs
expression: pretty(&stdout)
---
{
  "data": null,
  "error": {
    "code": "artifact.already_exists",
    "details": {},
    "message": "provider error: artifact 'design' already exists for change 'demo'"
  },
  "ok": false,
  "requestId": "req_00000000000000000000000000000000",
  "warnings": []
}
