crates/cli/tests/snapshots/artifact_write_snapshots__artifact_write_design_success.snap
---
source: crates/cli/tests/artifact_write_snapshots.rs
expression: pretty(&stdout)
---
{
  "data": {
    "artifactId": "design",
    "changeId": "demo",
    "kind": "design",
    "mode": "local",
    "path": ".speclink/changes/demo/design.md"
  },
  "error": null,
  "ok": true,
  "requestId": "req_00000000000000000000000000000000",
  "warnings": []
}
