crates/cli/tests/snapshots/artifact_write_snapshots__artifact_write_spec_success.snap
---
source: crates/cli/tests/artifact_write_snapshots.rs
expression: pretty(&stdout)
---
{
  "data": {
    "artifactId": "spec:user-auth",
    "changeId": "demo",
    "kind": "spec",
    "mode": "local",
    "path": ".speclink/changes/demo/specs/user-auth/spec.md"
  },
  "error": null,
  "ok": true,
  "requestId": "req_00000000000000000000000000000000",
  "warnings": []
}
